bar: ensure column flexboxes don't wrap

--- a/src/charts/BarChart/BarChart.css
+++ b/src/charts/BarChart/BarChart.css
@@ -23,6 +23,7 @@
 .chartsy-bar-column {
     display: flex;
     flex-direction: row;
+    flex-wrap: nowrap;
     width: 100%;
     position: relative;
 }
